removed all the old commented out code
I was getting annoyed by having code show up when using occur or grep,
code that was not part of the actual current version of
Strawberry.  After all, this is the whole point of using Mercurial!

--- a/strawberry.org
+++ b/strawberry.org
@@ -1,13 +1,10 @@
 #+INCLUDE:   /home/ucecesf/hg/homepages/level-0.org
 #+title: Strawberry plant propagation algorithm
-#+options: num:nil ^:nil
+#+options: num:nil ^:nil toc:nil
 
-|        |                               |
 | *Author* | {{{author}}} ({{{email}}})    |
 | *Date*   | {{{time(%Y-%m-%d %H:%M:%S)}}} |
-|        |                               |
 
-#+options: toc:nil
 #+toc: headlines 1
 
 * Overview and introduction
@@ -474,317 +471,6 @@ In the multi-objective case, the pareto front is combined with the elite set, a 
   printf('MOSD improvements: %d\n', mosd_numberimproved);
   endfunction
 #+end_src
-** COMMENT initialise: initialisation of arrays, processing arguments
-#+name: initialise
-#+begin_src octave :noweb yes
-  strawberry_initialise
-  global esfdebug
-  global mosd_numberimproved
-  global npruned
-  global nsimilar
-  global strawberry_fitness_method
-  global strawberry_diversity_tolerance
-  mosd_numberimproved = 0;
-  npruned = 0;
-  nsimilar = 0;
-  warning ('error', 'Octave:broadcast');
-  ## process arguments
-  if nargin<9, population_strategy = 4; end # population selection strategy
-  if nargin<8, ns = 100; end    # number of stable generations
-  if nargin<7, nrmax = 5; end   # number of runners
-  if nargin<6, npop = 100; end  # population size
-  if nargin<5, ngen = 1000; end # number of generations
-  if nargin<4
-    disp('Error: need at least 4 arguments to Strawberry method: x0, a, b & f.')
-    return
-  end
-  if nargin<10, 
-    output = ngen/50;
-  end             # how often to output status of population
-  if isempty (strawberry_fitness_method)
-    strawberry_fitness_method = 1;  #choose MOGA fitness for now
-  end
-  strawberry_diversity_tolerance = norm(b-a) / 1000;
-  printf(': ngen=%d npop=%d nrmax=%d ns=%d population strategy=%d and tolerance=%f fitness method=%d\n', ngen, npop, nrmax, ns, population_strategy, strawberry_diversity_tolerance, strawberry_fitness_method)
-
-  ## determine the number of processors to use in parallel.  If the
-  ## variable has not been set, we use the system function to determine
-  ## how many processors there are
-  global strawberry_numberofprocessors
-                                  # strawberry_numberofprocessors = 1
-  if isempty(strawberry_numberofprocessors)
-    strawberry_numberofprocessors = nproc();
-  endif
-  if strawberry_numberofprocessors > 1
-    printf (': using %d processors for parallel processing.\n', strawberry_numberofprocessors);
-    starttime = time;           # use wall clock time instead of CPU time
-  else
-    printf (': not using any parallel processing on a single processor system.\n');
-    starttime = cputime;
-  endif
-
-  constrained = nargin > 10;    # has a constraint function been passed?
-  if constrained
-    [phi, nx, nz, nf, ninf] = strawberry_newpopulation (x0,a,b,npop,f,constrained,g);
-  else
-    [phi, nx, nz, nf, ninf] = strawberry_newpopulation (x0,a,b,npop,f,constrained);
-  endif
-  pop = strawberry_sort (phi,nx,nz);
-  gen = 0;
-
-  if nz < 2
-    best = pop(:,1);
-  else
-    best = [];
-  endif
-  bestgen = gen;
-  nfunctionevaluations = npop; # initial population size
-
-  if output
-    printf('| %9s |', 'gen')
-    if nz > 1
-      for i=1:nz, printf(' %6sy%02d |', '', i); endfor
-      for i=1:nz, printf(' %6sy%02d |', '', i); endfor
-    else
-      for i=1:nx; printf(' %6sx%02d |', '', i); endfor
-      for i=1:nz; printf(' %6sy%02d |', '', i); endfor
-      if constrained; printf(' %9s |', 'c'); endif
-    endif
-    printf(' %9s | %9s | %9s |', '$n_f$', 'CPU (s)', 'Best found')
-    printf('\n');
-    printf('|-\n');
-  endif
-#+end_src
-** COMMENT prune population, removing infeasible solutions and multiple copies
-#+name: prune
-#+begin_src octave :noweb yes
-  if nz > 1
-    ## remove infeasible solutions from the population
-    fitindices = pop(nx+1,:) < 1e19;
-    if sum(fitindices) < size(pop,2)
-      fprintf(stderr, 'Removing %d solutions from population of %d.  \n', size(pop,2)-sum(fitindices), size(pop,2))
-      pop = pop(:,fitindices);
-    endif
-  endif
-  ## prune the solution, removing duplicate members as they contribute nothing
-  pop = strawberry_prune (pop, nx, nz);
-#+end_src
-** COMMENT find best members of the population
-The fitness method is used to find the best members of the population and assign each one a ranking N \in (0,1) with higher values better than lower values.  
-
-In the multi-objective case, the pareto front is combined with the elite set, a new pareto front is identified and duplicates are removed.  The elite set does not get involved in the selection and propagation.
-#+name: findbest
-#+begin_src octave :noweb yes
-  ## evaluate the fitness of the population.  For multi-objective problems,
-  ## this has the side effect of returning the pareto front 
-  [N pareto] = strawberry_fitness (pop,nx,nz,size(pop,2));
-  ## keep track of best.  For multi-objective problems, this means keeping the pareto set
-  debugprint(1, 'best', best)
-  debugprint(1, 'pareto', pareto)
-  debugprint(1, 'pop(1)', pop(:,1))
-  debugprint(1, 'nx, nz', [nx, nz])
-  if nz < 2 && pareto(nx+1) < best(nx+1) && norm(abs(best(1:nx)-pareto(1:nx))) > 1e-6
-    best = pareto;
-    bestgen = gen;
-    ## zzz = zfit (best (1:nx))
-    if ~output
-      printf('\n... new best solution at generation %d, z(1)=%g x=', gen, best(nx+1));
-      printf('%g ', best(1:nx));
-      printf('\n');
-    endif
-  elseif nz>1
-    ## the set of points returned by the fitness function is not really
-    ## a pareto set.  it is one point for each criterion.  we compare
-    ## these points to the existing ones and update if necessary.
-    if isempty(best)
-      best = pareto;
-    else
-      if size(pareto,2) > 1 && size(best,2) > 1
-        for i = 1:2
-          if pareto(nx+i,i) < best(nx+i,i)
-            best(:,i) = pareto(:,i);
-            bestgen = gen;
-          endif
-        endfor
-      else
-        if pareto(nx+1,1) < best(nx+1,1)
-          best(:,1) = pareto(:,1);
-          bestgen = gen;
-        endif
-      endif
-    endif
-    debugprint (1, 'size of pareto: ', length(best))
-  endif
-#+end_src
-** COMMENT output results during iteration
-#+name: iterationoutput
-#+begin_src octave :noweb yes
-  if 0 == mod(gen,output)
-    if strawberry_numberofprocessors > 1
-      dtime = time-starttime;
-    else
-      dtime = cputime-starttime;
-    endif
-    fprintf(stderr, '\r');
-    printf('| %9d |', gen);
-    if nz > 1
-      printf (' %9.3g |', best(nx+1:nx+nz,1), best(nx+1:nx+nz,end))
-      printf(' %9d | %9.1f | %9d |', nfunctionevaluations, dtime, bestgen);
-    else
-      printf (' %9.3g |', best(1:nx+nz))
-      if constrained; printf(' %9.3g |', best(nx+nz+1)); endif
-      printf(' %8d | %8.1f | %8d |', nfunctionevaluations, dtime, bestgen);
-    endif
-    printf('\n');
-  else
-    if nz > 1
-      ## [fitness pareto] = moga_fitness (pop(1:nx,:), pop(nx+1:nx+nz,:));
-      fprintf(stderr, '\r%30s %7d %3d/%4d %9.3g %9.3g %9.3g %9.3g', '', gen, size(best,2), length(pop), best(nx+1:nx+nz,1), best(nx+1:nx+nz,end))
-    else
-      if constrained
-        fprintf(stderr, '\r%30s %9d [%9d] %5d %13.6e %13.6e ', '', gen, bestgen, length(pop), best(nx+nz), best(nx+nz+1));
-      else
-        fprintf(stderr, '\r%30s %9d [%9d] %5d %8d %13.6e ', '', '', gen, bestgen, length(pop), nfunctionevaluations, best(nx+nz));
-      endif
-    endif
-  endif
-
-  debugprint (1,'strawberry: fitness', N);
-  actualnpop = size(pop,2);
-  if actualnpop < size (pop,2)
-    printf('Ummmm size of population %d is less than expected (%d)\n', size(1,pop), npop);
-  endif
-#+end_src
-** COMMENT select and evaluate
-#+name: selectandevaluate
-#+begin_src octave :noweb yes
-  ## generate all the new points and then evaluate them in parallel
-  n = 1;
-  newpop = [];
-  selected = [];
-  for p=1:npop                # we pick up to NPOP members to propagate
-    s = strawberry_select (N);
-    debugprint(2,'selected index', s)
-    if s > 0
-      selected(:,p) = pop(:,s);   # selected members remain for next generation; others die off
-      debugprint(3, 'selected fitness and point: ', [N(s), pop(:,s)']);
-      nr = strawberry_runners (N(s),nrmax); # number of runners
-      debugprint(2,': number of runners', nr)
-      for r=1:nr
-        dx = (b-a)/2 .* strawberry_distance (N(s),nx); # how far to run
-        ## fprintf(stderr, 'Selected %d with fitness %g to move %g\n', s, N(s), norm(dx))
-        debugprint(3, ': r and dx', [r; dx(1:nx)])
-        x = pop(1:nx,s)+dx;
-        x(x<a) = a(x<a);        # reset boundary
-        x(x>b) = b(x>b);        # reset boundary
-        ## if strawberry_isdiverse(newpop,x)
-        newpop{n} = x;
-        n = n + 1;
-        debugprint(2, ': added new member to population: ', x)
-        ## endif
-      endfor
-      ## set fitness so this member is not selected again
-      N(s) = -1;
-    endif
-  endfor
-  debugprint(1,'Size of selected set: ', size(selected))
-  debugprint(1,'Size of newpop: ', size(newpop))
-  ## evaluate these in parallel using an appropriate number of processors
-  ##parf = @(x) if length(x)>nx, x', else [x, f(x), 0]', endif
-  ##phi = parcellfun (strawberry_numberofprocessors, parf, newpop)';
-
-  if strawberry_numberofprocessors > 1
-    phi = parcellfun (strawberry_numberofprocessors, @(x) [x; f(x); g(x)], newpop, 'VerboseLevel', 0);
-  else
-    n = length(newpop);
-    x = newpop{1};
-    y = f(x);
-    phi = zeros(length(x)+length(y)+1,n);
-    phi(:,1) = [x;y;g(x)];
-    for i=2:n
-      x = newpop{i};
-      phi(:,i) = [x;f(x);g(x)];
-    end
-  end
-  nfunctionevaluations = nfunctionevaluations + length(phi);
-  debugprint (1, ': phi before removal of infeasible solutions', phi)
-  phi = phi(:,phi(nx+1,:)<1e19);
-  debugprint (1, ': phi after removal of infeasible solutions', phi)
-#+end_src
-** COMMENT improve with local search
-#+name: localmosd
-#+begin_src octave :noweb yes
-  ## try to improve each of the new solutions using a local search
-  ## procedure, or maybe only a single step or so of that procedure.
-  ## for i=1:length(phi)
-  ##   sdpop{i} = phi(1:nx,i);
-  ## endfor
-  ## function point = mosderrorhandler (s, f, x, a, b)
-  ##   printf('Error %d: index %d message=%s\n: ', s.identifier, s.index, s.message)
-  ## endfunction
-  ## improvedset = parcellfun (strawberry_numberofprocessors, @(x) [mosd(f,x,a,b)], sdpop, 'ErrorHandler', @mosderrorhandler);
-
-  ## as we cannot figure out how to get parcellfun to do what we want, we use sequential processing here for the time being
-  sdphi = zeros(size(phi));
-  for i=1:size(phi,2)
-    sdphi(:,i) = mosd (f, phi(1:nx,i), a, b);
-  endfor
-  ## combine the two and hope diversity check removes duplicates
-  phi = [phi, sdphi];
-#+end_src
-** COMMENT create new population
-#+name: newpopulation
-#+begin_src octave :noweb yes
-  ## sort the population, which is composed of the original NPOP
-  ## best plus those created in this loop, using the fitness for
-  ## sorting.
-  ## we have three sets of solutions that we can combine to create a
-  ## new population:
-  ## 1. the best overall so far
-  ## 2. the members selected from the previous generation for propagation
-  ## 3. and the new propagated solutions
-  ## there are therefore 3! combinations although we always should
-  ## include the new solutions so really have 4 different options:
-  ## new alone, new with best, new with selected and new with
-  ## selected and best.
-
-  ## fprintf(stderr, 'size best=%d selected=%d phi=%d\n', size(best,2), size(selected,2), size(phi,2));
-  switch (population_strategy)
-    case 1               # new members alone
-      pop = phi;
-    case 2               # new with selected
-      pop = [selected, phi];
-    case 3               # new with best
-      pop = [best, phi];
-    case 4               # new with best and selected
-      pop = [best, selected, phi];
-    otherwise
-      printf('Error: population strategy %d not recognised.', population_strategy)
-  endswitch
-#+end_src
-** COMMENT finish up
-#+name: finish
-#+begin_src octave :noweb yes
-  if gen < ngen
-    printf('Strawberry: terminating condition satisfied due to lack of improvement at gen=%d\n', gen);
-  endif
-  if output
-    printf('Strawberry: at end, nf=%d ninf=%d best solution:\n', nf, ninf)
-    disp(best);
-  endif
-  ## ensure the best solution is returned
-  pop = [best, pop];
-  x = pop(1:nx,:);
-  y = pop(nx+1:end,:);
-  if strawberry_numberofprocessors > 1
-    endtime = time;            # wall clock time
-  else
-    endtime = cputime;
-  endif
-  printf('\n: strawberry method elapsed time: %.1f with %d functions evaluated and %d solutions pruned with %d similar.\n', ...
-         endtime-starttime, nfunctionevaluations, npruned, nsimilar)
-  printf('MOSD improvements: %d\n', mosd_numberimproved);
-#+end_src
 * distance
 The distance method determines how far to send a runner.  The first argument is the fitness, \(f \in [0,1]\), and the second is the dimension of the problem, \(n>0\), i.e. the number of decision variables.  
 
@@ -939,7 +625,7 @@ To accomplish the latter, we consider a ranking that takes into account how good
     global moga_version
     global mosd_version
     if isempty (strawberry_version)
-      strawberry_version = '2016.11.01 19:07:32';
+      strawberry_version = '2016.11.01 19:16:44';
       mosd_initialise
       moga_initialise
       printf (': STRAWBERRY %s, main function\n', strawberry_version)
@@ -1340,6 +1026,7 @@ Strawberry is used on this objective function within a simple rectangle domain.
 #+end_src 
 
 * Recent change history
+#+name: changehistoryshellblock
 #+begin_src shell :exports results :results output
 hg log --template "{date|shortdate} {desc|firstline}\n" --limit 10
 #+end_src
