--- a/strawberry.org
+++ b/strawberry.org
@@ -2,8 +2,9 @@
 #+title: Strawberry plant propagation algorithm
 #+options: num:nil ^:nil toc:nil
 
-| *Author* | {{{author}}} ({{{email}}})    |
-| *Date*   | {{{time(%Y-%m-%d %H:%M:%S)}}} |
+| *Author*        | {{{author}}} ({{{email}}})    |
+| *Date*          | {{{time(%Y-%m-%d %H:%M:%S)}}} |
+| *Last revision* | {{{modification-time}}}       |
 
 #+toc: headlines 1
 
@@ -55,17 +56,22 @@ Major version log:
 - July 2016 :: multi-objective version extended to work for any number of criteria instead of just 2.
 - October 2015 :: started work on a MI-Strawberry version, hopefully as upwards compatible as possible.
 - September 2015 :: implemented a rank based fitness, used to prepare results in [[file:~/synced/research/multiobjective.optimisation/strawberry/paper.pdf][the paper on understanding the impacts of constraints]].  There is now a choice of fitness functions as the old, Pareto based, fitness function is still available (cf. Deb (2000) for an example).
-* TODO [0/9] improvements or bugs                             :noexport:
+* TODO [4/11] improvements or bugs                            :noexport:
+- [ ] include an evolution strategy as part of a genome for a GA 
+  - where the strategy is a combination of specific crossover and mutation operators.
+  - motivated by talk in session of META'2016 that I chaired on recent trends.
+  - could we use a strategy for distance of neighbours within Strawberry as part of the solution itself as well?
+- [ ] Hamming code for permutation vector distance and direction definitions.  This came about from discussions at META'2016 from a talk which used a GA to manipulate permutations.  Could consider this as an alternative for a distance for the [[file:~/s/research/others/abdellah.salhi/c1p/c1p.org][C1P problem]].
 - [ ] handling /uncertainty/ in strawberry with either probability distribution functions (*pdf*) or intervals.  The latter should be easier and possibly sufficient.
-- [ ] *mixed-integer* Strawberry:
-  - could we get away with not change anything in the main code but assume that the user passes a function which maps a given solution vector /x/ to a new one, taking care of rounding, e.g. for integer variables?
 - [ ] should propagate each individual only once, i.e. select (whether with tournament selection or otherwise) an individual only once so remove it from subsequent selection steps
 - [ ] should only evaluate new points, whether in parallel or not
 - [ ] consider only accepting solutions if they improve on the parent, possibly using a form of /Metropolis-Hastings/ acceptance rule as used in simulated annealing.
-- [ ] need to handle the case of the Pareto set becoming ever larger, potentially infinite in size.  We should prune the set somehow.
 - [ ] consider resource availability.  I wrote this after the EGH 2015 meeting and I am not sure exactly what I meant but it could be that we shouldn't allow too many solutions in the same place so maybe some form of diversity control?  not sure.
-- [ ] consider killing plants off after a certain number of generations, but keeping an overall /best/ solution record to ensure we don't lose the best solution found overall.  In terms of multi-objective optimisation, this may mean keeping an elite set of non-dominated solutions.
-- [ ] can we make the code available externally, e.g. on a web site?  If so, we need to bring in the MOGA codes into this code base.  This may not be a bad idea in any case but it does limit code re-use.
+- [X] *mixed-integer* Strawberry:
+  - could we get away with not change anything in the main code but assume that the user passes a function which maps a given solution vector /x/ to a new one, taking care of rounding, e.g. for integer variables?
+- [X] need to handle the case of the Pareto set becoming ever larger, potentially infinite in size.  We should prune the set somehow.
+- [X] consider killing plants off after a certain number of generations, but keeping an overall /best/ solution record to ensure we don't lose the best solution found overall.  In terms of multi-objective optimisation, this may mean keeping an elite set of non-dominated solutions.
+- [X] can we make the code available externally, e.g. on a web site?  If so, we need to bring in the MOGA codes into this code base.  This may not be a bad idea in any case but it does limit code re-use.
 * strawberry -- the main function for the package
 :PROPERTIES:
 :header-args: :tangle "strawberry.m"
@@ -625,14 +631,15 @@ To accomplish the latter, we consider a ranking that takes into account how good
     global moga_version
     global mosd_version
     if isempty (strawberry_version)
-      strawberry_version = '2016.11.01 19:24:29';
+      strawberry_version = '2016.11.11 08:39:48';
       mosd_initialise
       moga_initialise
       printf (': STRAWBERRY %s, main function\n', strawberry_version)
       printf (': using MOSD %s, multi-objective steepest descent method.\n', mosd_version)
       printf (': and MOGA %s, multi-objective genetic algorithm fitness function.\n', moga_version)
-      strawberry_octave = exist ('OCTAVE_VERSION', 'builtin') > 0
+      strawberry_octave = exist ('OCTAVE_VERSION', 'builtin') > 0;
       if strawberry_octave
+        printf(': running in Octave\n')
         pkg load parallel             #need parcellfun in particular
       endif
     endif
