--- a/fresa.org
+++ b/fresa.org
@@ -46,7 +46,7 @@ Major version log:
 #+begin_src julia
   module Fresa
 
-  version = "2016.11.17 14:22:04"
+  version = "2016.11.17 16:48:28"
   function __init__()
       println("Fresa PPA $version")
   end
@@ -57,6 +57,7 @@ Major version log:
   a = 0
   b = 1
   mosd_numberimproved = 0
+  n = 1
   npruned = 0
   nsimilar = 0
   population_strategy = 4
@@ -69,11 +70,10 @@ Major version log:
 #+name: neighbour
 #+begin_src julia
   function neighbour(x,f)
-      n = x + (1-f) * 2(rand(length(x),1)-0.5)
-      println(n)
-      n[n.<a] = a[n.<a];
-      n[n.>b] = b[n.>b];
-      return n
+      nx = x .+ (1-f) * 2(rand(n,1)-0.5) .* (b-a)
+      nx[nx.<a] = a[nx.<a];
+      nx[nx.>b] = b[nx.>b];
+      return nx
   end
 #+end_src 
 ** set bounds -- for real valued decision vectors
@@ -82,6 +82,8 @@ Mostly for testing as bounds will form part of the main method call.
   function setbounds(lower,upper)
       global a = lower;
       global b = upper;
+      global n = length(lower);
+      println("Size of problem: $n")
   end
 #+end_src 
 ** module end
@@ -91,16 +93,17 @@ Mostly for testing as bounds will form part of the main method call.
 * tests
 #+toc: headlines 2 local
 ** neighbour
+#+name: testneighbour
 #+begin_src julia :tangle testneighbour.jl
   using Fresa
-  x = rand(5,1)
+  a = -5*ones(5,1)
+  b = 5*ones(5,1)
+  x = a + (b-a) .* rand(5,1)
   println("$x")
-  a = zeros(5,1)
-  b = ones(5,1)
   Fresa.setbounds(a,b)
   for i in 1:10
-      println(i)
-      n = Fresa.neighbour(x,0.1)
+      print("$i: ")
+      n = Fresa.neighbour(x,0.9)
       println("$n")
   end
 #+end_src 
